<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.neo.util</groupId>
	<artifactId>neoutil-root</artifactId>
	<version>1.0.0</version>
	<name>Neo Util Root POM</name>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<!-- Jakarta -->
		<jakarta.persistence-api.version>3.0.0</jakarta.persistence-api.version>
		<jakarta.enterprise.cdi-api.version>3.0.0</jakarta.enterprise.cdi-api.version>
		<jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
		<jakarta.transaction-api.version>2.0.1</jakarta.transaction-api.version>
		<jakarta.ws.rs-api.version>3.0.0</jakarta.ws.rs-api.version>
		<jakarta.security.enterprise-api.version>3.0.0</jakarta.security.enterprise-api.version>

		<!-- Logging -->
		<slf4j.version>2.0.0</slf4j.version>
		<log4j.version>2.18.0</log4j.version>
		<!-- Jackson -->
		<jackson.version>2.13.3</jackson.version>
		<!-- Testing -->
		<junit.version>5.6.2</junit.version>
		<mockito.version>3.12.4</mockito.version>
		<h2.version>2.1.214</h2.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>integration</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.0.0-M7</version>
						<configuration>
							<!-- the 2gb of memory are needed by the tests of resource optimization, since they load a 30mb xml file for testdata -->
							<argLine>-Xms384m -Xmx4g -XX:+HeapDumpOnOutOfMemoryError -XX:-OmitStackTraceInFastThrow --enable-preview</argLine>
							<includes>
								<include>**/Test*.java</include>
								<include>**/*Test.java</include>
								<include>**/*TestCase.java</include>
								<include>**/*IT.java</include>
							</includes>
						</configuration>

					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<modules>
		<module>common</module>
		<module>framework</module>
		<module>jakarta/startup</module>
		<module>jakarta/elastic</module>
		<module>jakarta/database</module>
		<module>jakarta/rest</module>
		<module>microprofile</module>
		<module>helidon</module>
	</modules>
</project>